Add evidence subject identity
